The base main page layer created, the base progressBar functional implemented. Changes in project's structure.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "cmake.sourceDirectory": "F:/IT_Projects/Mine/Flutter/flutter_educational_shop/linux",
-  "dart.flutterSdkPath": "F:\\IT\\Flutter\\flutter"
+  "cmake.sourceDirectory": "F:/IT_Projects/Mine/Flutter/flutter_educational_shop/linux"
 }
