--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^1.4.0
   flutter_riverpod: ^2.6.1
   shared_preferences: ^2.5.3
+  flex_color_scheme: ^8.3.0
 
 dev_dependencies:
   flutter_test:
